Add unit tests skeleton for instructions

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,4 +6,8 @@ if(BUILD_TESTS)
 	add_executable(tests tests.c)
 	add_test(tests tests)
 	target_link_libraries(tests emu51 cmocka)
+
+	add_executable(test_instr test_instr.c)
+	add_test(test_instr test_instr)
+	target_link_libraries(test_instr emu51 cmocka)
 endif(BUILD_TESTS)
