Add coverage target in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ if (CMAKE_COMPILER_IS_GNUCC)
 		set(CMAKE_C_FLAGS "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
 		set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
 		set(CMAKE_MODULE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
+		set(GCOV_ENABLED true)
 	endif()
 endif()
 
