--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,4 +10,10 @@ if(BUILD_TESTS)
 	add_executable(test_instr test_instr.c)
 	add_test(test_instr test_instr)
 	target_link_libraries(test_instr emu51 cmocka)
+
+	if (GCOV_ENABLED)
+		add_custom_target(coverage
+			sh ${PROJECT_SOURCE_DIR}/tests/coverage-lcov.sh ${PROJECT_BINARY_DIR}
+			COMMENT "Generate coverage statistics")
+	endif()
 endif(BUILD_TESTS)
