cmake: disable building unit tests if cmocka is not found

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,11 +1,14 @@
 enable_testing()
 
-set(BUILD_TESTS ON CACHE BOOL "Build unit tests")
-if(BUILD_TESTS)
+find_library(CMOCKA_LIB NAMES cmocka)
+
+if(CMOCKA_LIB STREQUAL "CMOCKA_LIB-NOTFOUND")
+	message(WARNING "cmocka not found; unit tests will not be built!")
+else()
 	include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src)
 	add_executable(tests tests.c)
 	add_test(tests tests)
-	target_link_libraries(tests emu51 cmocka)
+	target_link_libraries(tests emu51 ${CMOCKA_LIB})
 
 	add_executable(test_instr test_instr.c)
 	add_test(test_instr test_instr)
@@ -16,4 +19,4 @@ if(BUILD_TESTS)
 			sh ${PROJECT_SOURCE_DIR}/tests/coverage-lcov.sh ${PROJECT_BINARY_DIR}
 			COMMENT "Generate coverage statistics")
 	endif()
-endif(BUILD_TESTS)
+endif()
