--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ enable_testing()
 # show all warnings when using gcc
 if (CMAKE_COMPILER_IS_GNUCC)
 	if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-		set(CMAKE_C_FLAGS "-g -O0 -Wall -W -fprofile-arcs -ftest-coverage")
+		set(CMAKE_C_FLAGS "-g -O0 -Wall -std=c99 -W -fprofile-arcs -ftest-coverage")
 		set(CMAKE_EXE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
 		set(CMAKE_MODULE_LINKER_FLAGS "-fprofile-arcs -ftest-coverage")
 		set(GCOV_ENABLED true)
