Restructure unit tests to allow splitting tests across files

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,13 +6,13 @@ if(CMOCKA_LIB STREQUAL "CMOCKA_LIB-NOTFOUND")
 	message(WARNING "cmocka not found; unit tests will not be built!")
 else()
 	include_directories(${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/src)
-	add_executable(tests tests.c)
-	add_test(tests tests)
-	target_link_libraries(tests emu51 ${CMOCKA_LIB})
+	add_executable(test_api test_api.c)
+	add_test(test_api test_api)
+	target_link_libraries(test_api emu51 ${CMOCKA_LIB})
 
-	add_executable(test_instr test_instr.c)
-	add_test(test_instr test_instr)
-	target_link_libraries(test_instr emu51 cmocka)
+	add_executable(test_jumps test_jumps.c)
+	add_test(test_jumps test_jumps)
+	target_link_libraries(test_jumps emu51 cmocka)
 
 	if (GCOV_ENABLED)
 		add_custom_target(coverage
