--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,9 +14,9 @@ else()
 	add_test(test_jumps test_jumps)
 	target_link_libraries(test_jumps emu51 cmocka)
 
-	add_executable(test_mem test_mem.c)
-	add_test(test_mem test_mem)
-	target_link_libraries(test_mem emu51 cmocka)
+	add_executable(test_helpers test_helpers.c)
+	add_test(test_helpers test_helpers)
+	target_link_libraries(test_helpers emu51 cmocka)
 
 	if (GCOV_ENABLED)
 		add_custom_target(coverage
